deployment-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-prod
  template:
    metadata:
      labels:
        app: nginx-prod
    spec:
      containers:
      - name: nginx
        image: cithit/roger142:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: prod-service
spec:
  selector:
    app: nginx-prod
  type: LoadBalancer
  loadBalancerIP: 10.48.228.117
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
